# project_Mandelbrot

./: API.rst  README.rst  micc3.cfg  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
project_mandelbrot/: __init__.py
tests/: __init__.py
tests/project_mandelbrot/: test_project_mandelbrot.py
