[tool.poetry]
name = "project_Mandelbrot"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Arn Van Hemelen <arn.vanhemelen@student.uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/arnvanhemelen/project_Mandelbrot"
homepage = "https://github.com/arnvanhemelen/project_Mandelbrot"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
